# aptlywebui

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  docker-compose.tls-ui.yml  docker-compose.tls.yml  docker-compose.yml
aptly/: Dockerfile  aptly.conf  entrypoint.sh
aptly-webui/: .dockerignore  .env.example  APTLY_WEBUI_ARCHITECTURE.md  ARCHITECTURE.md  COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  Dockerfile  FAST_DB_MODE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PLANNING_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  README-SYSTEMD.md  README.md  RISK_ANALYSIS.md  TASK_BREAKDOWN.md  TROUBLESHOOTING.md  app.py  clean-build.sh  commands.sh  debug.sh  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  fix-and-build.sh  install-systemd.sh  manage-services.sh  nginx-aptly-webui.conf  requirements.txt  start-all.sh  test_aptly_server.py  uninstall-systemd.sh
aptly-webui/backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  app.py  cache.py  db_reader.py  db_sync.py  optimized_sync.py  pyproject.toml  requirements.txt  sync_service.py
aptly-webui/backend/alembic/: env.py
aptly-webui/backend/alembic/versions/: 001_initial_schema.py
aptly-webui/backend/src/aptly_webui/: __init__.py  main.py
aptly-webui/backend/src/aptly_webui/api/: schemas.py
aptly-webui/backend/src/aptly_webui/api/routes/: auth.py  gpg.py  mirrors.py  publish.py  repos.py  snapshots.py  tasks.py
aptly-webui/backend/src/aptly_webui/core/: config.py  logging.py  security.py
aptly-webui/backend/src/aptly_webui/db/: models.py  session.py
aptly-webui/backend/src/aptly_webui/services/: aptly_client.py
aptly-webui/examples/: Dockerfile-aptly-with-api  docker-compose-sidecar.yml  supervisord.conf
aptly-webui/frontend/: .dockerignore  .env  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
aptly-webui/frontend-vite-backup/: index.html  package.json  vite.config.ts
aptly-webui/frontend-vite-backup/src/: App.tsx
aptly-webui/frontend-vite-backup/src/pages/: Mirrors.tsx  PackageSearch.tsx  Settings.tsx
aptly-webui/frontend-vite-backup/src/services/: api.ts
aptly-webui/frontend/src/: main.tsx
aptly-webui/frontend/src/app/: layout.tsx  page.tsx
aptly-webui/frontend/src/app/dashboard/: layout.tsx  page.tsx
aptly-webui/frontend/src/app/dashboard/admin/audit/: page.tsx
aptly-webui/frontend/src/app/dashboard/admin/users/: page.tsx
aptly-webui/frontend/src/app/dashboard/mirrors/: page.tsx
aptly-webui/frontend/src/app/dashboard/publish/: page.tsx
aptly-webui/frontend/src/app/dashboard/search/: page.tsx
aptly-webui/frontend/src/app/dashboard/snapshots/: page.tsx
aptly-webui/frontend/src/app/login/: page.tsx
aptly-webui/frontend/src/app/mirrors/: page.tsx
aptly-webui/frontend/src/app/publish/: page.tsx
aptly-webui/frontend/src/app/search/: page.tsx
aptly-webui/frontend/src/app/settings/: page.tsx
aptly-webui/frontend/src/app/snapshots/: page.tsx
aptly-webui/frontend/src/components/: Modal.tsx  Pagination.tsx  auth-provider.tsx  mirror-create-wizard.tsx  protected-route.tsx  query-provider.tsx  sidebar.tsx
aptly-webui/frontend/src/components/ui/: alert.tsx
aptly-webui/frontend/src/lib/: api.ts
aptly-webui/frontend/src/pages/: Dashboard.tsx  Mirrors.tsx  Publish.tsx  Settings.tsx  Snapshots.tsx
aptly-webui/frontend/src/services/: api.ts
aptly-webui/frontend/src/styles/: App.css  index.css
aptly-webui/nginx/: nginx.conf
aptly-webui/scripts/: install.sh
aptly-webui/static/js/: app.js
aptly-webui/systemd/: aptly-api.service  aptly-webui-backend.service  aptly-webui-frontend.service  aptly-webui.service
aptly-webui/templates/: index.html
backend/: requirements.txt
backend/app/: __init__.py  aptly.py  audit.py  config.py  db.py  deps.py  main.py  models.py  scheduler.py  schemas.py  security.py  seed.py
backend/app/routers/: aptly_proxy.py  audit.py  auth.py  backup.py  gpg.py  schedules.py  system.py  users.py
backend/tests/: test_api.py  test_mirror_auth.py  test_security.py
caddy/: Caddyfile  Caddyfile.ui
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  Toast.tsx  ui.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/pages/: Account.tsx  Audit.tsx  Backups.tsx  Dashboard.tsx  Gpg.tsx  Login.tsx  Mirrors.tsx  Packages.tsx  Publish.tsx  Repos.tsx  Schedules.tsx  Snapshots.tsx  Users.tsx
repo/: nginx.conf
(+1 files in other folders)
